--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <queries>
+        <!-- allow discovery of launchable apps (app drawer) -->
+        <intent>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent>
+
+        <!-- known icon packs (add more as you test) -->
+        <package android:name="app.lawnchair.lawnicons.play" />
+        <package android:name="com.whicons.iconpack" />
+        <package android:name="org.jraf.iconpack.simple" />
+
+        <!-- common icon-pack theme categories -->
+        <intent>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="com.anddoes.launcher.THEME" />
+        </intent>
+        <intent>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="com.novalauncher.THEME" />
+        </intent>
+    </queries>
 
     <application
         android:allowBackup="true"
@@ -12,6 +34,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MinimalistLauncher"
         tools:targetApi="31">
+
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
